--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <h1>Color Flipper</h1>
+    </nav>
     <main>
         <div>
             <h2>Background Color: </h2><span class="color">#FFFFFF</span>
